--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
                     <div class="row">
                     <!-- User 1 -->
-                    <div class="col-md-6 user-comment">
+                    <div class="col-md-6 user-comment1">
                       <p>Once upon a time all the Rivers combined to protest against 
                       action of the Sea in making their waters salt.
                       “When we come to you,” said they to the Sea.</p>
@@ -276,7 +276,7 @@
                       </div>
                     </div>
                     <!-- User 2 -->
-                    <div class="col-md-6 comments">
+                    <div class="col-md-6 user-comment2">
                       <p>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</p>
                       <div class="client">
                         <div class="client-img">
@@ -303,7 +303,7 @@
                     </div>
                     <div class="row">
                     <!-- User 1 -->
-                    <div class="col-md-6 comments">
+                    <div class="col-md-6 user-comment1">
                       <p>Once upon a time all the Rivers combined to protest against 
                       action of the Sea in making their waters salt.
                       “When we come to you,” said they to the Sea.</p>
@@ -318,7 +318,7 @@
                       </div>
                     </div>
                     <!-- User 2 -->
-                    <div class="col-md-6 comments">
+                    <div class="col-md-6 user-comment2">
                       <p>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</p>
                       <div class="client">
                         <div class="client-img">
@@ -345,7 +345,7 @@
                     </div>
                     <div class="row">
                     <!-- User 1 -->
-                    <div class="col-md-6 comments">
+                    <div class="col-md-6 user-comment1">
                       <p>Once upon a time all the Rivers combined to protest against 
                       action of the Sea in making their waters salt.
                       “When we come to you,” said they to the Sea.</p>
@@ -360,7 +360,7 @@
                       </div>
                     </div>
                     <!-- User 2 -->
-                    <div class="col-md-6 comments">
+                    <div class="col-md-6 user-comment2">
                       <p>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</p>
                       <div class="client">
                         <div class="client-img">
