--- a/index.html
+++ b/index.html
@@ -506,12 +506,12 @@
 
 
         <div class="from-box">
-          <form action="">
+          <form action="#" method="post">
             <div class="row">
               <div class="col-md-6">
-                <input type="text" placeholder="NAME*" class="form-control mb-3">
-                <input type="text" placeholder="EMAIL*" class="form-control mb-3">
-                <input type="text" placeholder="SUBJECT*" class="form-control mb-3">
+                <input type="text" placeholder="NAME*" autocomplete="off" class="form-control mb-3">
+                <input type="text" placeholder="EMAIL*" autocomplete="off" class="form-control mb-3">
+                <input type="text" placeholder="SUBJECT*" autocomplete="off" class="form-control mb-3">
               </div>
 
               <div class="col-md-6">
