--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -72,6 +73,7 @@
               </nav>
               <!-- Navmenu End -->
             </div>
+              <!-- Banner Section Start -->
               <div class="row height align-self-center ">
                 <div class="col-md-6 hero-content ">
                   <h6>introducing lucid theme</h6>
@@ -87,7 +89,7 @@
                   </div>
                 </div>
               </div>
-        </div>
+          </div>
       </div>
     </header>
     <!-- Header Section End -->
